# thejas32-testbed

./: .gitmodules  CONTRIBUTORS.txt  CREDITS.txt  LICENSE  Project-Specific.kicad_sym  README.md  fp-lib-table  sym-lib-table  thejas.kicad_sym  thejas32-testbed.kicad_pcb  thejas32-testbed.kicad_prl  thejas32-testbed.kicad_pro  thejas32-testbed.kicad_sch
3dmodels/: README.md
Module_DCDC.pretty/: Mini 360.kicad_mod
hw/: NOTES.md  Project-Specific.kicad_sym  README.md  thejas32-testbed.kicad_pcb  thejas32-testbed.kicad_prl
hw/3dmodels/: 1050170001.wrl  mini360-model.step
hw/images/: simplified_schematic.drawio
hw/jigs/: check-berg-headers.toml  jig-solder-bottom.scad  solder-bottom.toml
hw/project_lib.pretty/: Mini360_step-down.kicad_mod  proj_C_0603_1608Metric_Pad1.08x0.95mm_HandSolder.kicad_mod  proj_R_0603_1608Metric_Pad0.98x0.95mm_HandSolder.kicad_mod
release/v1.0/: README.md
scripts/: assign-mpn.py
sw/bringup/poweron/: CMakeLists.txt  README.md  poweron.c
sw/bringup/poweron/images/: poweron.drawio
sw/bringup/poweron_autobaud/: CMakeLists.txt  autobaud.c  autobaud.h  measure.pio  poweron_autobaud.c
sw/bringup/uart_boot/: CMakeLists.txt  measure.pio  uart_boot.c
sw/bringup/uart_boot/HelloWorld/: HelloWorld.ino
sw/bringup/uart_boot/basic-tests/displayTest/: displayTest.ino
sw/bringup/uart_boot/basic-tests/timerInterrupt/: timerInterrupt.ino
